prod_snapshot_2015-09-24_1030/objects/OwnershipTransferSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Holds min and max values for ownership transfer</description>
    <fields>
        <fullName>MaxDaysNoTouch__c</fullName>
        <description>Max days to transfer - currently this isn&apos;t set leading to 10k&apos;s of unnecessary attempts to transfer old leads</description>
        <label>MaxDaysNoTouch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinDaysNoTouch__c</fullName>
        <description>The low end of the query ex. 11 for Lead, 31 for Opportunity</description>
        <label>MinDaysNoTouch</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ObjectType__c</fullName>
        <description>The Object being transferred ex Lead or Opportunity</description>
        <label>ObjectType</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Ownership Transfer settings</label>
</CustomObject>